# orthopy

./: .codecov.yml  .gitignore  .pylintrc  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  justfile  orthopy-logo-with-text.xcf  setup.cfg  setup.py  test_requirements.txt  tox.ini
.circleci/: config.yml
.github/workflows/: ci.yml
orthopy/: __about__.py  __init__.py  eval.py  gauss.py  helpers.py  main.py  poly_classes.py  rc.py  recurrence_coefficients.py  schemes.py  tools.py  tridiag_eigen.py
orthopy/c1/: __init__.py  _alp.py  associated_legendre.py  chebyshev1.py  chebyshev2.py  gegenbauer.py  jacobi.py  legendre.py  orth.py  recurrence_coefficients.py  tools.py
orthopy/c2/: orth.py  tools.py
orthopy/c3/: __init__.py  orth.py  tools.py
orthopy/cn/: __init__.py  main.py  orth.py  tools.py
orthopy/disk/: __init__.py  orth.py  tools.py
orthopy/e1r/: __init__.py  main.py  orth.py  tools.py
orthopy/e1r2/: __init__.py  main.py  orth.py  tools.py
orthopy/e2r2/: __init__.py  orth.py  tools.py
orthopy/e3r2/: __init__.py  orth.py  tools.py
orthopy/enr2/: __init__.py  main.py  orth.py  tools.py
orthopy/hexahedron/: __init__.py  orth.py  tools.py
orthopy/line/: __init__.py  alp.py  main.py  poly_classes.py  recurrence_coefficients.py  schemes.py  tools.py
orthopy/line_segment/: __init__.py  alp.py  orth.py  recurrence_coefficients.py  tools.py
orthopy/ncube/: __init__.py  orth.py
orthopy/quadrilateral/: __init__.py  orth.py  tools.py
orthopy/s2/: __init__.py  orth.py  tools.py  xu.py  yu.py  zernike.py  zernike2.py
orthopy/sphere/: __init__.py  orth.py  sph.py  tools.py
orthopy/t2/: __init__.py  main.py  orth.py  tools.py
orthopy/tools/: __init__.py  generate_rc.py  iterators.py  misc.py
orthopy/triangle/: __init__.py  orth.py  tools.py  triangle_orth.py
orthopy/u3/: __init__.py  main.py  orth.py  tools.py
src/orthopy/: __about__.py  __init__.py  helpers.py
src/orthopy/c1/: __init__.py  associated_legendre.py  chebyshev1.py  chebyshev2.py  gegenbauer.py  jacobi.py  legendre.py
src/orthopy/cn/: __init__.py  main.py  tools.py
src/orthopy/e1r/: main.py  tools.py
src/orthopy/e1r2/: main.py  tools.py
src/orthopy/enr2/: main.py  tools.py
src/orthopy/s2/: tools.py  xu.py  zernike2.py
src/orthopy/t2/: __init__.py  tools.py
src/orthopy/u3/: __init__.py  main.py  tools.py
test/: helpers.py  test_alp.py  test_c1_alp.py  test_c1_associated_legendre.py  test_c1_chebyshev1.py  test_c1_chebyshev2.py  test_c1_gegenbauer.py  test_c1_jacobi.py  test_c1_legendre.py  test_c1_tools.py  test_c2.py  test_c3.py  test_cn.py  test_disk_orth.py  test_e1r.py  test_e1r2.py  test_e1r2_physicist.py  test_e1r2_probabilist.py  test_e2r2.py  test_e3r2.py  test_enr2.py  test_eval.py  test_hexahedron.py  test_line_alp.py  test_line_eval.py  test_line_jacobi.py  test_line_legendre.py  test_line_orthopy.py  test_line_polyclasses.py  test_line_schemes.py  test_line_segment_alp.py  test_line_segment_chebyshev1.py  test_line_segment_chebyshev2.py  test_line_segment_gegenbauer.py  test_line_segment_jacobi.py  test_line_segment_legendre.py  test_line_segment_tools.py  test_ncube.py  test_orthopy.py  test_poly_eval.py  (+13 more)
test/test_s2/: helpers_s2.py  test_xu.py  test_yu.py  test_zernike.py  test_zernike2.py
tests/: test_c1_associated_legendre.py  test_c1_chebyshev1.py  test_c1_gegenbauer.py  test_c1_jacobi.py  test_e1r.py  test_e1r2.py  test_enr2.py  test_t2.py  test_tools.py
tests/test_s2/: test_zernike.py  test_zernike2.py
