[metadata]
name = orthopy
version = 0.9.0
author = Nico Schlömer
author_email = nico.schloemer@gmail.com
description = Orthogonal polynomials for Python
url = https://github.com/nschloe/orthopy
project_urls =
    Code=https://github.com/nschloe/orthopy
    Issues=https://github.com/nschloe/orthopy/issues
    Funding=https://github.com/sponsors/nschloe
long_description = file: README.md
long_description_content_type = text/markdown
license = GPL-3.0-or-later
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Mathematics

[options]
package_dir =
    =src
packages = find:
install_requires =
    importlib_metadata;python_version<"3.8"
    numpy
    sympy
python_requires = >=3.6

[options.packages.find]
where=src

[options.extras_require]
all =
    cplot
    dufte
    matplotlib
    meshio
    meshzoo
disk-plot =
    meshzoo
plot =
    dufte
    matplotlib
sphere-plot =
    cplot
    meshio
    meshzoo
